# speech_feature_online

./: .gitignore  Dockerfile  Jenkinsfile  README.md  bootstrap-local.sh  build-schema.sh  deploy-api.sh  deploy-dev.sh  deploy-workers.sh  deploy.sh  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  prototype.py  runjob.sh  sample.env  test_dispatch.sh
api/: .pylintrc  Dockerfile  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 88d35f9be055_initial.py  c17744c2dca1_init.py
api/app/: __init__.py  database.py  main.py  models.py  schemas.py  settings.py  util.py  validators.py
api/app/scripts/: create_admin_user.py
api/scripts/: create_admin_user.py
api/static/: processor-schema.json
api/tests/: test_validator.py
nginx/: nginx.conf
react/: .eslintrc.js  index.ejs  package.json  tsconfig.json  webpack.config.js  webpack.config.production.js
react/docs/: overview.md
react/src/: Routes.tsx  api.ts  index.tsx  theme.ts  types.ts  util.ts
react/src/Components/: Display.tsx  Footer.tsx  Header.tsx  JobForm.tsx  LoadingOverlay.tsx  Page.tsx  ProgressLoadingOverlay.tsx  SubmissionErrorModal.tsx  index.ts  (+2 more)
shennong_runner/: Dockerfile  environment.yml  processor-schema.json  requirements.txt
shennong_runner/app/: analyse.py  parse_shennong.py  settings.py
templates/: error.html  error_type.html  frontpage.html
templates/scripts/: error_sorry.js  filetype.js
tmp/results/: README.md  index-1.html
worker/: Dockerfile  new-schema.json  processor-schema.json  pyproject.toml
worker/app/: __init__.py  analyse.py  celery_app.py  celeryconfig.py  settings.py  worker.py
worker/app/cloud_providers/ec2/: ec2_provider.py  provision.sh
worker/app/email/: test_provider.py
worker/app/email/templates/: test_template.html
worker/app/emails/: smtp_service.py
worker/app/emails/templates/: password-reset.html  success.html  verify-email.html
worker/app/tests/: test_local_file_manager.py  test_placeholder.py  test_schema.py
worker/app/tests/fixtures/: sample-request.json
worker/scripts/: dispatch_job.py  parse_shennong.py  upload_file.py
(+31 files in other folders)
