[tool.poetry]
name = "speech-features-online"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
aiofiles = "^0.8.0"
celery = {extras = ["redis"], version = "^5.2.3"}
psycopg2-binary = "^2.9.3"
pydantic = {extras = ["email"], version = "^1.9.0"}
python = "^3.7"
SQLAlchemy = "^1.4.31"
boto3 = "^1.21.22"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
debugpy = "^1.5.1"
pytest = "^7.0.1"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
